experimental/parser/testdata/parser/field/ok.proto.stderr.txt
error: unexpected `required`
  --> testdata/parser/field/ok.proto:22:5
   |
22 |     required Type name = 1;
   |     ^^^^^^^^ expected type name, `optional`, or `repeated`
   |
  help: delete it
   |
22 | -     required Type name = 1;
22 | +     Type name = 1;
   |
   |
   = help: required fields are only permitted in proto2; even then, their use is
           strongly discouraged

error: unexpected `required`
  --> testdata/parser/field/ok.proto:27:5
   |
27 |     required .Type name = 1;
   |     ^^^^^^^^ expected type name, `optional`, or `repeated`
   |
  help: delete it
   |
27 | -     required .Type name = 1;
27 | +     .Type name = 1;
   |
   |
   = help: required fields are only permitted in proto2; even then, their use is
           strongly discouraged

error: unexpected `required`
  --> testdata/parser/field/ok.proto:32:5
   |
32 |     required package.Type name = 1;
   |     ^^^^^^^^ expected type name, `optional`, or `repeated`
   |
  help: delete it
   |
32 | -     required package.Type name = 1;
32 | +     package.Type name = 1;
   |
   |
   = help: required fields are only permitted in proto2; even then, their use is
           strongly discouraged

error: unexpected `required`
  --> testdata/parser/field/ok.proto:37:5
   |
37 |     required .package.Type name = 1;
   |     ^^^^^^^^ expected type name, `optional`, or `repeated`
   |
  help: delete it
   |
37 | -     required .package.Type name = 1;
37 | +     .package.Type name = 1;
   |
   |
   = help: required fields are only permitted in proto2; even then, their use is
           strongly discouraged

error: unexpected `export` modifier on message field
  --> testdata/parser/field/ok.proto:43:5
   |
43 |     export Type name = 1;
   |     ^^^^^^
  help: delete it
   |
43 | -     export Type name = 1;
43 | +     Type name = 1;
   |
   = help: `export` only applies to a type definition

error: unexpected `local` modifier on message field
  --> testdata/parser/field/ok.proto:44:5
   |
44 |     local Type name = 1;
   |     ^^^^^
  help: delete it
   |
44 | -     local Type name = 1;
44 | +     Type name = 1;
   |
   = help: `local` only applies to a type definition

encountered 6 errors
